force-app/main/default/objects/Check_In__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Project Completion %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>