force-app/main/default/objects/Check_In__c/fields/Jason_s_Date__c.field-meta.xml
<CustomField>
    <fullName>Jason_s_Date__c</fullName>
    <inlineHelpText>It&apos;s a critical field.</inlineHelpText>
    <label>Jason&apos;s Date</label>
    <type>Date</type>
</CustomField>