force-app/main/default/objects/Check_In__c/fields/Reporting_Location__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Location__c</fullName>
    <label>Check-In Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Onsite</fullName>
                <default>true</default>
                <label>Job Site</label>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Video Conference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>