force-app/main/default/objects/Check_In__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Issues</fullName>
                <default>true</default>
                <label>No Issues</label>
            </value>
            <value>
                <fullName>Minor Issue</fullName>
            </value>
            <value>
                <fullName>Major Issue</fullName>
            </value>
            <value>
                <fullName>Project Haulted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>