force-app/main/default/objects/Check_In__c/fields/Trade_Type__c.field-meta.xml
<CustomField>
    <fullName>Trade_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Trade Type this Check-In is associated with.</inlineHelpText>
    <label>Trade Type</label>
    <referenceTo>Trade_Type__c</referenceTo>
    <relationshipName>Check_In_s</relationshipName>
    <type>Lookup</type>
</CustomField>