force-app/main/default/objects/Check_In__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contractor that is associated with the work for this Check-In.</inlineHelpText>
    <label>Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Check_In_s</relationshipName>
    <type>Lookup</type>
</CustomField>